# ponder

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .rustfmt.toml  ADDRESS-CONTEXT.md  AGENTS.md  BACKLOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING_CHANGE_GUIDELINES.md  ERROR_MESSAGE_FORMATS.md  MANIFESTO.md  MIGRATION.md  PLAN-CONTEXT.md  PLAN.md  PRD.md  PR_REVIEW_RESPONSE.md  README.md  REMEDIATION_COMPLETE.md  REMEDIATION_PLAN.md  T001-plan.md  T002-plan.md  T003-plan.md  T004-plan.md  T007-ci-monitoring-summary.md  T008-github-permissions-ci-verification.md  T008-plan.md  T009-plan.md  T009-task.md  T010-plan.md  T010-task.md  T011-plan.md  T011-task.md  T012-plan.md  T013-plan.md  T014-plan.md  T015-plan.md  (+16 more)
.cargo/: clippy.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring.md
.github/workflows/: ci.yml  claude-code-review.yml  security.yml
benches/: crypto_bench.rs
docs/: COMMANDS.md  DEVELOPMENT_SETUP.md
scripts/: pre-commit-glance.sh
src/: constants.rs  editor.rs  errors.rs  journal_logic.rs  lib.rs  main.rs  setup.rs
src/ai/: chunking.rs  mod.rs  ollama.rs  prompts.rs
src/cli/: mod.rs
src/config/: mod.rs
src/crypto/: age.rs  mod.rs  session.rs  temp.rs
src/db/: embeddings.rs  entries.rs  mod.rs  patterns.rs  schema.rs  summaries.rs
src/errors/: mod.rs
src/journal/: mod.rs  mod.rs.deadcodepatch  tests.rs
src/journal/io/: mod.rs  tests.rs
src/journal_core/: mod.rs
src/journal_io/: mod.rs
src/ops/: ask.rs  backup.rs  converse.rs  detection.rs  edit.rs  migration.rs  mod.rs  patterns.rs  query_analysis.rs  reflect.rs  reindex.rs  search.rs  summarize.rs
tests/: backup_tests.rs  cli_tests.rs  config_tests.rs  crypto_tests.rs  debug_helpers.rs  editor_command_validation_integration_tests.rs  editor_error_integration_tests.rs  editor_security_tests.rs  first_run_integration_tests.rs  journal_integration_tests.rs  locking_tests.rs  logging_tests.rs  migration_tests.rs  ops_integration_tests.rs  security_tests.rs  test_helpers.rs
thinktank_20250508_134107_2274/: gemini-2.5-flash-preview-04-17.md  gemini-2.5-pro-preview-05-06-synthesis.md  gpt-4.1.md  o4-mini.md  openrouter-deepseek-deepseek-chat-v3-0324.md  openrouter-deepseek-deepseek-r1.md  openrouter-meta-llama-llama-4-maverick.md  openrouter-x-ai-grok-3-beta.md  openrouter-x-ai-grok-3-mini-beta.md
