[package]
name = "ponder"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
serial_test = "1.0"
