[package]
name = "ponder"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "fmt", "registry", "chrono"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "serde"] }
shellexpand = "3.1"
fs2 = "0.4.3"

[dev-dependencies]
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
serial_test = "1.0"
serde_json = "1.0"
